[package]
name = "rustpeasant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.3.0"
wasmer-compiler-cranelift = "2.3.0"
wasmer-compiler = "2.3.0"
wasmer-wasi = "2.3.0"
wasmer-types = "2.3.0"
wasmer-engine-universal = "2.3.0"
