[package]
name = "rustpeasant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
llvm = ["dep:wasmer-compiler-llvm"]

[dependencies]
wasmer = "2.3.0"
wasmer-compiler-cranelift = "2.3.0"
wasmer-compiler-llvm = { version = "2.3.0", optional = true }
wasmer-compiler = "2.3.0"
wasmer-wasi = "2.3.0"
wasmer-types = "2.3.0"
wasmer-engine-universal = "2.3.0"
rlimit = "*"
privdrop = "*"
nix = "*"

[target.'cfg(target_os ="linux")'.dependencies]
scheduler = { git = "https://github.com/Jille/rust-scheduler.git", branch = "portability" }
